--- a/notes/note-01.qmd
+++ b/notes/note-01.qmd
@@ -1,3 +1,15 @@
 ---
-title: "Note 01"
+title: "Note 01: Reading chapter 2 part 1"
 ---
+
+
+- Quarto knits to a qmd and it makes documents far prettier than just knitting to an rmd. Quarto is the newest version of Rmarkdown
+- Quarto supports multiple languages (python, Javascript, Julia, R)
+- Don’t use the console unless you are doing calculations and looking for help 
+- To make something bold use two ** surrounding the phrase. 
+- To italicize something, use one * around the phrase (or _ around) 
+- Make sure to space out your code and comment your R-chunks 
+- CamelCase is like this thisVariableCapitalizesTheFirstLetterExceptTheFirst
+- Snake case is like this this_is_snake_case 
+- [wordsOnTheScreen](link) is used to link to an image 
+
