--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,5 @@
 # Introduction {.unnumbered}
 
 This is my online notebook for COMP/STAT112 course taken at [Macalester College](https://www.macalester.edu/).  Please, use the side bar on the left for navigation.
+
+Hi! This is my portfolio for stat 112. 
