--- a/notes/Chapter-5.qmd
+++ b/notes/Chapter-5.qmd
@@ -51,3 +51,9 @@ To visualize 3 variables:
 - Play with colors 
 - Play with facets 
 - Add an axis 
+
+If you have 3 variables, how do you represent: 
+- 3 categorical variables: Use a stacked bar chart with color, with facets 
+- 2 categorical and 1 numerical: Use a stacked density plot with color, with facets (or histogram, density, violin)
+- 2 numerical and 1 categorical: Use a scatterplot with color or facets (categorical) (or heatmap or star)
+- 3 numerical: Use a scatterplot with a discrete/ binned version of the 3rd numerical variable and change the color, shape, size, or transparency 
