--- a/activities/effective_viz.qmd
+++ b/activities/effective_viz.qmd
@@ -60,7 +60,8 @@ When we're including our plot in an article, paper, book, or other similar outle
 
 ggplot(weather, aes(y = temp3pm, x = temp9am, color = location)) + 
   geom_point() + 
-  labs(x = "Temperature at 9 am", y = "Temperature at 3 pm", color = "Location")  
+  labs(x = "Temperature at 9 am", y = "Temperature at 3 pm", color = "Location")+
+  scale_color_viridis_d()
 ```
 
 \
@@ -72,14 +73,6 @@ ggplot(weather, aes(y = temp3pm, x = temp9am, color = location)) +
 
 Let's now make a graphic more accessible.
 
-```{r}
-#| fig-cap: "Density plots of 3pm temperatures in 3 Australian locations."
-#| fig-alt: "???"
-
-ggplot(weather, aes(x = temp3pm, fill = location)) + 
-  geom_density(alpha = 0.5) + 
-  labs(x = "3pm temperature (Celsius)")  
-```
 
 #### Part a {.unnumbered}
 
